fixes header buttons color, size, and alignment

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,12 @@
 /* GLOBAL */
 :root {
   font-size: 16px;
+  --highlight-orange: hsla(42, 87%, 55%, 1);
+  --white: hsla(0, 0%, 100%, 1);
+  --dashboard-background-gray: hsla(214, 32%, 91%, 1);
+  --black: hsla(0, 0%, 0%, 1);
+  --primary-blue: hsla(201, 79%, 46%, 1);
+  --gray: hsla(24, 2%, 60%, 1);
 }
 
 /* CSS RESET */
@@ -12,7 +18,7 @@
 
 body {
   display: grid;
-  grid-template-columns: 300px minmax(700px, 7fr) minmax(300px, 3fr);
+  grid-template-columns: 270px minmax(700px, 7fr) minmax(300px, 3fr);
   grid-template-rows: 175px minmax(285px, 1fr);
 
   min-height: 100vh;
@@ -103,8 +109,9 @@ nav > .nav-section > *:hover {
 .header {
   grid-column: 2 / 4;
   display: grid;
-  grid-template-columns: 5fr 3fr;
-  grid-template-rows: repeat(2, 50%);
+  grid-template-columns: 6fr 4fr;
+  grid-template-rows: 3rem 1fr;
+  gap: 1rem;
 
   padding: 1rem;
 }
@@ -115,9 +122,6 @@ nav > .nav-section > *:hover {
   justify-content: center;
   align-items: center;
   gap: 1rem;
-
-  padding: 0;
-  margin: 0 1rem;
 }
 
 .user-greeting {
@@ -156,13 +160,6 @@ nav > .nav-section > *:hover {
   font-weight: bold;
 }
 
-.project-buttons {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 1rem;
-}
-
 .avatar-small {
   display: inline-block;
 
@@ -192,20 +189,29 @@ nav > .nav-section > *:hover {
   font-size: 1.2rem;
 }
 
+/* PROJECT BUTTONS */
+.project-crud-buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1.5rem;
+}
+
 .primary-button {
   display: inline-flex;
   justify-content: center;
   align-items: center;
 
-  height: 2rem;
-  width: fit-content;
+  height: 2.25rem;
+  width: 5.75rem;
   margin: 0;
   padding: 1rem;
   border: 0;
   border-radius: 2rem;
 
   font-weight: bold;
-  background-color: hsla(216, 100%, 50%, 1);
+  font-size: 14px;
+  background-color: var(--primary-blue);
   color: white;
   transition: 0.2s all;
 }
@@ -214,6 +220,7 @@ nav > .nav-section > *:hover {
   cursor: pointer;
   background-color: hsla(216, 100%, 55%, 1);
 }
+/* END PROJECT BUTTONS */
 
 .search-container {
   display: flex;
